--- a/IntroToProgramming.ipynb
+++ b/IntroToProgramming.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMi0AAS85mSg4VfCuSKNJo0",
+      "authorship_tag": "ABX9TyMvOWm8QWH1lhhFtbtm7bcu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1251,13 +1251,411 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "**Conditions**\n",
+        "\n",
+        "In programming, conditions are statements that are either True or False. "
+      ],
       "metadata": {
-        "id": "YnsMyxHyaGYS"
+        "id": "bVo26oEPXG5y"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#You can also use conditions to compare the values of variables. \n",
+        "\n",
+        "var_one = 1\n",
+        "var_two = 2\n",
+        "\n",
+        "print(var_one < 1)\n",
+        "print(var_two >= var_one)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YnsMyxHyaGYS",
+        "outputId": "54c18672-3e07-4027-8d4c-007b5d337400"
       },
-      "execution_count": null,
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n",
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Important Note: When you check two values are equal, make sure you use the == sign, and not the = sign.\n",
+        "\n",
+        "var_one==1 checks if the value of var_one is 1, \n",
+        "but var_one=1 sets the value of var_one to 1."
+      ],
+      "metadata": {
+        "id": "9F47vZjtY8og"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Conditional statements**\n",
+        "\n",
+        "Conditional statements use conditions to modify how your function runs. They check the value of a condition, and if the condition evaluates to True, then a certain block of code is executed. (Otherwise, if the condition is False, then the code is not run.)"
+      ],
+      "metadata": {
+        "id": "oNMWoFroZD1D"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**\"if\" statements**"
+      ],
+      "metadata": {
+        "id": "q2WOBccoZjx4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def evaluate_temp(temp):\n",
+        "    # Set an initial message\n",
+        "    message = \"Normal temperature.\"\n",
+        "    # Update value of message only if temperature greater than 38\n",
+        "    if temp > 38:\n",
+        "        message = \"Fever!\"\n",
+        "    return message"
+      ],
+      "metadata": {
+        "id": "xRdwHwkUYpKX"
+      },
+      "execution_count": 2,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(evaluate_temp(37))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Oj2kd124Z4kB",
+        "outputId": "fd88898e-c863-4bea-8b4e-5547a5d9c444"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Normal temperature.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(evaluate_temp(39))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5nQIoEYQZ5YK",
+        "outputId": "b333eb43-5dc6-4d6c-aa06-ccf257c251fb"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Fever!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**\"if ... else\" statements**\n",
+        "\n",
+        "We can use \"else\" statements to run code if a statement is False. The code under the \"if\" statement is run if the statement is True, and the code under \"else\" is run if the statement is False."
+      ],
+      "metadata": {
+        "id": "sSswDy_kaMUu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def evaluate_temp_with_else(temp):\n",
+        "    if temp > 38:\n",
+        "        message = \"Fever!\"\n",
+        "    else:\n",
+        "        message = \"Normal temperature.\"\n",
+        "    return message"
+      ],
+      "metadata": {
+        "id": "vo8Yi3S-aNqs"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(evaluate_temp_with_else(37))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ecOcLB6mahBu",
+        "outputId": "efcf922f-f9be-4dfb-8c08-5a29ecbe0bb2"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Normal temperature.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**\"if ... elif ... else\" statements**\n",
+        "\n",
+        "We can use \"elif\" (which is short for \"else if\") to check if multiple conditions might be true."
+      ],
+      "metadata": {
+        "id": "Xu1421a2amgu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def evaluate_temp_with_elif(temp):\n",
+        "    if temp > 38:\n",
+        "        message = \"Fever!\"\n",
+        "    elif temp > 35:\n",
+        "        message = \"Normal temperature.\"\n",
+        "    else:\n",
+        "        message = \"Low temperature.\"\n",
+        "    return message"
+      ],
+      "metadata": {
+        "id": "3hIpEqEjaoKG"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "evaluate_temp_with_elif(36)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 37
+        },
+        "id": "DHDQ8Ml3ax5L",
+        "outputId": "09a69153-9b51-450b-b6b3-4796b0c39649"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Normal temperature.'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "evaluate_temp_with_elif(34)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 37
+        },
+        "id": "QVDYz4bka7aU",
+        "outputId": "ef21e92b-d885-4db4-d3a5-22c6263b125c"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Low temperature.'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Example - Calculations**\n",
+        "\n",
+        "We can also use conditional statements to perform different calculations.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "JBS_uAhlbGct"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def get_taxes(earnings):\n",
+        "    if earnings < 12000:\n",
+        "        tax_owed = .25 * earnings\n",
+        "    else:\n",
+        "        tax_owed = .30 * earnings\n",
+        "    return tax_owed"
+      ],
+      "metadata": {
+        "id": "sh9rM02IbDyY"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ana_taxes = get_taxes(9000)\n",
+        "bob_taxes = get_taxes(15000)\n",
+        "\n",
+        "print(ana_taxes)\n",
+        "print(bob_taxes)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "67a-QtumbPH3",
+        "outputId": "fc122946-5038-42f6-ea41-e7cd78ba7f31"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2250.0\n",
+            "4500.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# It accepts a number as input and adds three if the input is less than 10, and otherwise adds eight. \n",
+        "\n",
+        "def add_three_or_eight(num):\n",
+        "  if num < 10:\n",
+        "    result = num + 3\n",
+        "  else:\n",
+        "    result = num + 8\n",
+        "  return result"
+      ],
+      "metadata": {
+        "id": "lWHMJVb1bcuF"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Example - Multiple \"elif\" statements**"
+      ],
+      "metadata": {
+        "id": "h5gFY9e_b7E4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def get_dose(weight):\n",
+        "    # Dosage is 1.25 ml for anyone under 5.2 kg\n",
+        "    if weight < 5.2:\n",
+        "        dose = 1.25\n",
+        "    elif weight < 7.9:\n",
+        "        dose = 2.5\n",
+        "    elif weight < 10.4:\n",
+        "        dose = 3.75\n",
+        "    elif weight < 15.9:\n",
+        "        dose = 5\n",
+        "    elif weight < 21.2:\n",
+        "        dose = 7.5\n",
+        "    # Dosage is 10 ml for anyone 21.2 kg or over\n",
+        "    else:\n",
+        "        dose = 10\n",
+        "    return dose"
+      ],
+      "metadata": {
+        "id": "LBMgnnRMb8Ln"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(get_dose(12))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lBqDkSKScA1n",
+        "outputId": "0b8593cf-382f-448e-8a47-ff3142e02ae2"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n"
+          ]
+        }
+      ]
     }
   ]
 }
